--- a/collectors/charts.d.plugin/opensips/metadata.yaml
+++ b/collectors/charts.d.plugin/opensips/metadata.yaml
@@ -5,23 +5,23 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: opensips.dialogs_active
           description: OpenSIPS Active Dialogs
-          unit: dialogs
+          unit: "dialogs"
           chart_type: area
           dimensions:
             - name: active
             - name: early
         - name: opensips.users
           description: OpenSIPS Users
-          unit: users
+          unit: "users"
           chart_type: line
           dimensions:
             - name: registered
@@ -30,49 +30,49 @@ metrics:
             - name: expires
         - name: opensips.registrar
           description: OpenSIPS Registrar
-          unit: registrations/s
+          unit: "registrations/s"
           chart_type: line
           dimensions:
             - name: accepted
             - name: rejected
         - name: opensips.transactions
           description: OpenSIPS Transactions
-          unit: transactions/s
+          unit: "transactions/s"
           chart_type: line
           dimensions:
             - name: UAS
             - name: UAC
         - name: opensips.core_rcv
           description: OpenSIPS Core Receives
-          unit: queries/s
+          unit: "queries/s"
           chart_type: line
           dimensions:
             - name: requests
             - name: replies
         - name: opensips.core_fwd
           description: OpenSIPS Core Forwards
-          unit: queries/s
+          unit: "queries/s"
           chart_type: line
           dimensions:
             - name: requests
             - name: replies
         - name: opensips.core_drop
           description: OpenSIPS Core Drops
-          unit: queries/s
+          unit: "queries/s"
           chart_type: line
           dimensions:
             - name: requests
             - name: replies
         - name: opensips.core_err
           description: OpenSIPS Core Errors
-          unit: queries/s
+          unit: "queries/s"
           chart_type: line
           dimensions:
             - name: requests
             - name: replies
         - name: opensips.core_bad
           description: OpenSIPS Core Bad
-          unit: queries/s
+          unit: "queries/s"
           chart_type: line
           dimensions:
             - name: bad_URIs_rcvd
@@ -80,7 +80,7 @@ metrics:
             - name: bad_msg_hdr
         - name: opensips.tm_replies
           description: OpenSIPS TM Replies
-          unit: replies/s
+          unit: "replies/s"
           chart_type: line
           dimensions:
             - name: received
@@ -88,7 +88,7 @@ metrics:
             - name: local
         - name: opensips.transactions_status
           description: OpenSIPS Transactions Status
-          unit: transactions/s
+          unit: "transactions/s"
           chart_type: line
           dimensions:
             - name: 2xx
@@ -98,13 +98,13 @@ metrics:
             - name: 6xx
         - name: opensips.transactions_inuse
           description: OpenSIPS InUse Transactions
-          unit: transactions
+          unit: "transactions"
           chart_type: line
           dimensions:
             - name: inuse
         - name: opensips.sl_replies
           description: OpenSIPS SL Replies
-          unit: replies/s
+          unit: "replies/s"
           chart_type: line
           dimensions:
             - name: 1xx
@@ -118,7 +118,7 @@ metrics:
             - name: ACKed
         - name: opensips.dialogs
           description: OpenSIPS Dialogs
-          unit: dialogs/s
+          unit: "dialogs/s"
           chart_type: line
           dimensions:
             - name: processed
@@ -126,28 +126,28 @@ metrics:
             - name: failed
         - name: opensips.net_waiting
           description: OpenSIPS Network Waiting
-          unit: kilobytes
+          unit: "kilobytes"
           chart_type: line
           dimensions:
             - name: UDP
             - name: TCP
         - name: opensips.uri_checks
           description: OpenSIPS URI Checks
-          unit: checks / sec
+          unit: "checks / sec"
           chart_type: line
           dimensions:
             - name: positive
             - name: negative
         - name: opensips.traces
           description: OpenSIPS Traces
-          unit: traces / sec
+          unit: "traces / sec"
           chart_type: line
           dimensions:
             - name: requests
             - name: replies
         - name: opensips.shmem
           description: OpenSIPS Shared Memory
-          unit: kilobytes
+          unit: "kilobytes"
           chart_type: line
           dimensions:
             - name: total
@@ -157,7 +157,7 @@ metrics:
             - name: free
         - name: opensips.shmem_fragment
           description: OpenSIPS Shared Memory Fragmentation
-          unit: fragments
+          unit: "fragments"
           chart_type: line
           dimensions:
             - name: fragments
