--- a/collectors/python.d.plugin/adaptec_raid/metadata.yaml
+++ b/collectors/python.d.plugin/adaptec_raid/metadata.yaml
@@ -5,39 +5,39 @@ alerts:
     link: https://github.com/netdata/netdata/blob/master/health/health.d/adaptec_raid.conf
     metric: adaptec_raid.ld_status
     info: logical device status is failed or degraded
-    os: linux
+    os: "linux"
 metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: adaptec_raid.ld_status
           description: 'Status of logical devices (1: Failed or Degraded)'
-          unit: bool
+          unit: "bool"
           chart_type: line
           dimensions:
             - name: a dimension per logical device
         - name: adaptec_raid.pd_state
           description: 'State of physical devices (1: not Online)'
-          unit: bool
+          unit: "bool"
           chart_type: line
           dimensions:
             - name: a dimension per physical device
         - name: adaptec_raid.smart_warnings
           description: S.M.A.R.T warnings
-          unit: count
+          unit: "count"
           chart_type: line
           dimensions:
             - name: a dimension per physical device
         - name: adaptec_raid.temperature
           description: Temperature
-          unit: celsius
+          unit: "celsius"
           chart_type: line
           dimensions:
             - name: a dimension per physical device
