--- a/collectors/python.d.plugin/fail2ban/metadata.yaml
+++ b/collectors/python.d.plugin/fail2ban/metadata.yaml
@@ -5,28 +5,28 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: fail2ban.faile_attempts
           description: Failed attempts
-          unit: attempts/s
+          unit: "attempts/s"
           chart_type: line
           dimensions:
             - name: a dimension per jail
         - name: fail2ban.bans
           description: Bans
-          unit: bans/s
+          unit: "bans/s"
           chart_type: line
           dimensions:
             - name: a dimension per jail
         - name: fail2ban.banned_ips
           description: Banned IP addresses (since the last restart of netdata)
-          unit: ips
+          unit: "ips"
           chart_type: line
           dimensions:
             - name: a dimension per jail
