--- a/collectors/python.d.plugin/ipfs/metadata.yaml
+++ b/collectors/python.d.plugin/ipfs/metadata.yaml
@@ -5,36 +5,36 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: ipfs.bandwidth
           description: IPFS Bandwidth
-          unit: kilobits/s
+          unit: "kilobits/s"
           chart_type: line
           dimensions:
             - name: in
             - name: out
         - name: ipfs.peers
           description: IPFS Peers
-          unit: peers
+          unit: "peers"
           chart_type: line
           dimensions:
             - name: peers
         - name: ipfs.repo_size
           description: IPFS Repo Size
-          unit: GiB
+          unit: "GiB"
           chart_type: area
           dimensions:
             - name: avail
             - name: size
         - name: ipfs.repo_objects
           description: IPFS Repo Objects
-          unit: objects
+          unit: "objects"
           chart_type: line
           dimensions:
             - name: objects
