--- a/collectors/python.d.plugin/retroshare/metadata.yaml
+++ b/collectors/python.d.plugin/retroshare/metadata.yaml
@@ -5,30 +5,30 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: retroshare.bandwidth
           description: RetroShare Bandwidth
-          unit: kilobits/s
+          unit: "kilobits/s"
           chart_type: area
           dimensions:
             - name: Upload
             - name: Download
         - name: retroshare.peers
           description: RetroShare Peers
-          unit: peers
+          unit: "peers"
           chart_type: line
           dimensions:
             - name: All friends
             - name: Connected friends
         - name: retroshare.dht
           description: Retroshare DHT
-          unit: peers
+          unit: "peers"
           chart_type: line
           dimensions:
             - name: DHT nodes estimated
