--- a/collectors/python.d.plugin/varnish/metadata.yaml
+++ b/collectors/python.d.plugin/varnish/metadata.yaml
@@ -5,29 +5,29 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: varnish.session_connection
           description: Connections Statistics
-          unit: connections/s
+          unit: "connections/s"
           chart_type: line
           dimensions:
             - name: accepted
             - name: dropped
         - name: varnish.client_requests
           description: Client Requests
-          unit: requests/s
+          unit: "requests/s"
           chart_type: line
           dimensions:
             - name: received
         - name: varnish.all_time_hit_rate
           description: All History Hit Rate Ratio
-          unit: percentage
+          unit: "percentage"
           chart_type: stacked
           dimensions:
             - name: hit
@@ -35,7 +35,7 @@ metrics:
             - name: hitpass
         - name: varnish.current_poll_hit_rate
           description: Current Poll Hit Rate Ratio
-          unit: percentage
+          unit: "percentage"
           chart_type: stacked
           dimensions:
             - name: hit
@@ -43,25 +43,25 @@ metrics:
             - name: hitpass
         - name: varnish.cached_objects_expired
           description: Expired Objects
-          unit: expired/s
+          unit: "expired/s"
           chart_type: line
           dimensions:
             - name: objects
         - name: varnish.cached_objects_nuked
           description: Least Recently Used Nuked Objects
-          unit: nuked/s
+          unit: "nuked/s"
           chart_type: line
           dimensions:
             - name: objects
         - name: varnish.threads_total
           description: Number Of Threads In All Pools
-          unit: number
+          unit: "number"
           chart_type: line
           dimensions:
             - name: None
         - name: varnish.threads_statistics
           description: Threads Statistics
-          unit: threads/s
+          unit: "threads/s"
           chart_type: line
           dimensions:
             - name: created
@@ -69,13 +69,13 @@ metrics:
             - name: limited
         - name: varnish.threads_queue_len
           description: Current Queue Length
-          unit: requests
+          unit: "requests"
           chart_type: line
           dimensions:
             - name: in queue
         - name: varnish.backend_connections
           description: Backend Connections Statistics
-          unit: connections/s
+          unit: "connections/s"
           chart_type: line
           dimensions:
             - name: successful
@@ -86,55 +86,55 @@ metrics:
             - name: failed
         - name: varnish.backend_requests
           description: Requests To The Backend
-          unit: requests/s
+          unit: "requests/s"
           chart_type: line
           dimensions:
             - name: sent
         - name: varnish.esi_statistics
           description: ESI Statistics
-          unit: problems/s
+          unit: "problems/s"
           chart_type: line
           dimensions:
             - name: errors
             - name: warnings
         - name: varnish.memory_usage
           description: Memory Usage
-          unit: MiB
+          unit: "MiB"
           chart_type: stacked
           dimensions:
             - name: free
             - name: allocated
         - name: varnish.uptime
           description: Uptime
-          unit: seconds
+          unit: "seconds"
           chart_type: line
           dimensions:
             - name: uptime
     - name: Backend
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: varnish.backend
           description: Backend {backend_name}
-          unit: kilobits/s
+          unit: "kilobits/s"
           chart_type: area
           dimensions:
             - name: header
             - name: body
     - name: Storage
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: varnish.storage_usage
           description: Storage {storage_name} Usage
-          unit: KiB
+          unit: "KiB"
           chart_type: stacked
           dimensions:
             - name: free
             - name: allocated
         - name: varnish.storage_alloc_objs
           description: Storage {storage_name} Allocated Objects
-          unit: objects
+          unit: "objects"
           chart_type: line
           dimensions:
             - name: allocated
