--- a/collectors/python.d.plugin/zscores/metadata.yaml
+++ b/collectors/python.d.plugin/zscores/metadata.yaml
@@ -5,22 +5,22 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: zscores.z
           description: Z Score
-          unit: z
+          unit: "z"
           chart_type: line
           dimensions:
             - name: a dimension per chart or dimension
         - name: zscores.3stddev
           description: Z Score >3
-          unit: count
+          unit: "count"
           chart_type: stacked
           dimensions:
             - name: a dimension per chart or dimension
