--- a/collectors/charts.d.plugin/libreswan/metadata.yaml
+++ b/collectors/charts.d.plugin/libreswan/metadata.yaml
@@ -5,23 +5,23 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: IPSEC tunnel
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: libreswan.net
           description: LibreSWAN Tunnel ${name} Traffic
-          unit: kilobits/s
+          unit: "kilobits/s"
           chart_type: area
           dimensions:
             - name: in
             - name: out
         - name: libreswan.uptime
           description: LibreSWAN Tunnel ${name} Uptime
-          unit: seconds
+          unit: "seconds"
           chart_type: line
           dimensions:
             - name: uptime
