--- a/collectors/charts.d.plugin/sensors/metadata.yaml
+++ b/collectors/charts.d.plugin/sensors/metadata.yaml
@@ -5,52 +5,52 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: sensor chip
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: sensors.temp
           description: Temperature
-          unit: Celsius
+          unit: "Celsius"
           chart_type: line
           dimensions:
             - name: '{filename}'
         - name: sensors.volt
           description: Voltage
-          unit: Volts
+          unit: "Volts"
           chart_type: line
           dimensions:
             - name: '{filename}'
         - name: sensors.curr
           description: Current
-          unit: Ampere
+          unit: "Ampere"
           chart_type: line
           dimensions:
             - name: '{filename}'
         - name: sensors.power
           description: Power
-          unit: Watt
+          unit: "Watt"
           chart_type: line
           dimensions:
             - name: '{filename}'
         - name: sensors.fans
           description: Fans Speed
-          unit: Rotations / Minute
+          unit: "Rotations / Minute"
           chart_type: line
           dimensions:
             - name: '{filename}'
         - name: sensors.energy
           description: Energy
-          unit: Joule
+          unit: "Joule"
           chart_type: area
           dimensions:
             - name: '{filename}'
         - name: sensors.humidity
           description: Humidity
-          unit: Percent
+          unit: "Percent"
           chart_type: line
           dimensions:
             - name: '{filename}'
