--- a/collectors/python.d.plugin/alarms/metadata.yaml
+++ b/collectors/python.d.plugin/alarms/metadata.yaml
@@ -5,22 +5,22 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: alarms.status
           description: Alarms ({status mapping})
-          unit: status
+          unit: "status"
           chart_type: line
           dimensions:
             - name: a dimension per alarm
         - name: alarms.status
           description: Alarm Values
-          unit: value
+          unit: "value"
           chart_type: line
           dimensions:
             - name: a dimension per alarm
