--- a/collectors/python.d.plugin/anomalies/metadata.yaml
+++ b/collectors/python.d.plugin/anomalies/metadata.yaml
@@ -5,27 +5,27 @@ alerts:
     link: https://github.com/netdata/netdata/blob/master/health/health.d/anomalies.conf
     metric: anomalies.probability
     info: average anomaly probability over the last 2 minutes
-    os: linux
+    os: "linux"
 metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: anomalies.probability
           description: Anomaly Probability
-          unit: probability
+          unit: "probability"
           chart_type: line
           dimensions:
             - name: a dimension per probability
         - name: anomalies.anomaly
           description: Anomaly
-          unit: count
+          unit: "count"
           chart_type: stacked
           dimensions:
             - name: a dimension per anomaly
