--- a/collectors/python.d.plugin/ceph/metadata.yaml
+++ b/collectors/python.d.plugin/ceph/metadata.yaml
@@ -5,104 +5,104 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: ceph.general_usage
           description: Ceph General Space
-          unit: KiB
+          unit: "KiB"
           chart_type: stacked
           dimensions:
             - name: avail
             - name: used
         - name: ceph.general_objects
           description: Ceph General Objects
-          unit: objects
+          unit: "objects"
           chart_type: area
           dimensions:
             - name: cluster
         - name: ceph.general_bytes
           description: Ceph General Read/Write Data/s
-          unit: KiB/s
+          unit: "KiB/s"
           chart_type: area
           dimensions:
             - name: read
             - name: write
         - name: ceph.general_operations
           description: Ceph General Read/Write Operations/s
-          unit: operations
+          unit: "operations"
           chart_type: area
           dimensions:
             - name: read
             - name: write
         - name: ceph.general_latency
           description: Ceph General Apply/Commit latency
-          unit: milliseconds
+          unit: "milliseconds"
           chart_type: area
           dimensions:
             - name: apply
             - name: commit
         - name: ceph.pool_usage
           description: Ceph Pools
-          unit: KiB
+          unit: "KiB"
           chart_type: line
           dimensions:
             - name: a dimension per Ceph Pool
         - name: ceph.pool_objects
           description: Ceph Pools
-          unit: objects
+          unit: "objects"
           chart_type: line
           dimensions:
             - name: a dimension per Ceph Pool
         - name: ceph.pool_read_bytes
           description: Ceph Read Pool Data/s
-          unit: KiB/s
+          unit: "KiB/s"
           chart_type: area
           dimensions:
             - name: a dimension per Ceph Pool
         - name: ceph.pool_write_bytes
           description: Ceph Write Pool Data/s
-          unit: KiB/s
+          unit: "KiB/s"
           chart_type: area
           dimensions:
             - name: a dimension per Ceph Pool
         - name: ceph.pool_read_operations
           description: Ceph Read Pool Operations/s
-          unit: operations
+          unit: "operations"
           chart_type: area
           dimensions:
             - name: a dimension per Ceph Pool
         - name: ceph.pool_write_operations
           description: Ceph Write Pool Operations/s
-          unit: operations
+          unit: "operations"
           chart_type: area
           dimensions:
             - name: a dimension per Ceph Pool
         - name: ceph.osd_usage
           description: Ceph OSDs
-          unit: KiB
+          unit: "KiB"
           chart_type: line
           dimensions:
             - name: a dimension per Ceph OSD
         - name: ceph.osd_size
           description: Ceph OSDs size
-          unit: KiB
+          unit: "KiB"
           chart_type: line
           dimensions:
             - name: a dimension per Ceph OSD
         - name: ceph.apply_latency
           description: Ceph OSDs apply latency
-          unit: milliseconds
+          unit: "milliseconds"
           chart_type: line
           dimensions:
             - name: a dimension per Ceph OSD
         - name: ceph.commit_latency
           description: Ceph OSDs commit latency
-          unit: milliseconds
+          unit: "milliseconds"
           chart_type: line
           dimensions:
             - name: a dimension per Ceph OSD
