--- a/collectors/python.d.plugin/hddtemp/metadata.yaml
+++ b/collectors/python.d.plugin/hddtemp/metadata.yaml
@@ -5,16 +5,16 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: hddtemp.temperatures
           description: Disk Temperatures
-          unit: Celsius
+          unit: "Celsius"
           chart_type: line
           dimensions:
             - name: a dimension per disk
