--- a/collectors/python.d.plugin/memcached/metadata.yaml
+++ b/collectors/python.d.plugin/memcached/metadata.yaml
@@ -5,41 +5,41 @@ alerts:
     link: https://github.com/netdata/netdata/blob/master/health/health.d/memcached.conf
     metric: memcached.cache
     info: cache memory utilization
-    os: freebsd
+    os: "freebsd"
   - name: memcached_cache_fill_rate
     link: https://github.com/netdata/netdata/blob/master/health/health.d/memcached.conf
     metric: memcached.cache
     info: average rate the cache fills up (positive), or frees up (negative) space
       over the last hour
-    os: freebsd
+    os: "freebsd"
 metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: memcached.cache
           description: Cache Size
-          unit: MiB
+          unit: "MiB"
           chart_type: stacked
           dimensions:
             - name: available
             - name: used
         - name: memcached.net
           description: Network
-          unit: kilobits/s
+          unit: "kilobits/s"
           chart_type: area
           dimensions:
             - name: in
             - name: out
         - name: memcached.connections
           description: Connections
-          unit: connections/s
+          unit: "connections/s"
           chart_type: line
           dimensions:
             - name: current
@@ -47,47 +47,47 @@ metrics:
             - name: total
         - name: memcached.items
           description: Items
-          unit: items
+          unit: "items"
           chart_type: line
           dimensions:
             - name: current
             - name: total
         - name: memcached.evicted_reclaimed
           description: Evicted and Reclaimed Items
-          unit: items
+          unit: "items"
           chart_type: line
           dimensions:
             - name: reclaimed
             - name: evicted
         - name: memcached.get
           description: Get Requests
-          unit: requests
+          unit: "requests"
           chart_type: stacked
           dimensions:
             - name: hints
             - name: misses
         - name: memcached.get_rate
           description: Get Request Rate
-          unit: requests/s
+          unit: "requests/s"
           chart_type: line
           dimensions:
             - name: rate
         - name: memcached.set_rate
           description: Set Request Rate
-          unit: requests/s
+          unit: "requests/s"
           chart_type: line
           dimensions:
             - name: rate
         - name: memcached.delete
           description: Delete Requests
-          unit: requests
+          unit: "requests"
           chart_type: stacked
           dimensions:
             - name: hits
             - name: misses
         - name: memcached.cas
           description: Check and Set Requests
-          unit: requests
+          unit: "requests"
           chart_type: stacked
           dimensions:
             - name: hits
@@ -95,28 +95,28 @@ metrics:
             - name: bad value
         - name: memcached.increment
           description: Increment Requests
-          unit: requests
+          unit: "requests"
           chart_type: stacked
           dimensions:
             - name: hits
             - name: misses
         - name: memcached.decrement
           description: Decrement Requests
-          unit: requests
+          unit: "requests"
           chart_type: stacked
           dimensions:
             - name: hits
             - name: misses
         - name: memcached.touch
           description: Touch Requests
-          unit: requests
+          unit: "requests"
           chart_type: stacked
           dimensions:
             - name: hits
             - name: misses
         - name: memcached.touch_rate
           description: Touch Request Rate
-          unit: requests/s
+          unit: "requests/s"
           chart_type: line
           dimensions:
             - name: rate
