--- a/collectors/python.d.plugin/riakkv/metadata.yaml
+++ b/collectors/python.d.plugin/riakkv/metadata.yaml
@@ -6,53 +6,53 @@ alerts:
     metric: riak.kv.latency.get
     info: average time between reception of client GET request and subsequent response
       to client over the last hour
-    os: '*'
+    os: "*"
   - name: riakkv_kv_get_slow
     link: https://github.com/netdata/netdata/blob/master/health/health.d/riakkv.conf
     metric: riak.kv.latency.get
     info: average time between reception of client GET request and subsequent response
       to the client over the last 3 minutes, compared to the average over the last
       hour
-    os: '*'
+    os: "*"
   - name: riakkv_1h_kv_put_mean_latency
     link: https://github.com/netdata/netdata/blob/master/health/health.d/riakkv.conf
     metric: riak.kv.latency.put
     info: average time between reception of client PUT request and subsequent response
       to the client over the last hour
-    os: '*'
+    os: "*"
   - name: riakkv_kv_put_slow
     link: https://github.com/netdata/netdata/blob/master/health/health.d/riakkv.conf
     metric: riak.kv.latency.put
     info: average time between reception of client PUT request and subsequent response
       to the client over the last 3 minutes, compared to the average over the last
       hour
-    os: '*'
+    os: "*"
   - name: riakkv_list_keys_active
     link: https://github.com/netdata/netdata/blob/master/health/health.d/riakkv.conf
     metric: riak.core.fsm_active
     info: number of currently running list keys finite state machines
-    os: '*'
+    os: "*"
 metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: riak.kv.throughput
           description: Reads & writes coordinated by this node
-          unit: operations/s
+          unit: "operations/s"
           chart_type: line
           dimensions:
             - name: gets
             - name: puts
         - name: riak.dt.vnode_updates
           description: Update operations coordinated by local vnodes by data type
-          unit: operations/s
+          unit: "operations/s"
           chart_type: line
           dimensions:
             - name: counters
@@ -60,19 +60,19 @@ metrics:
             - name: maps
         - name: riak.search
           description: Search queries on the node
-          unit: queries/s
+          unit: "queries/s"
           chart_type: line
           dimensions:
             - name: queries
         - name: riak.search.documents
           description: Documents indexed by search
-          unit: documents/s
+          unit: "documents/s"
           chart_type: line
           dimensions:
             - name: indexed
         - name: riak.consistent.operations
           description: Consistent node operations
-          unit: operations/s
+          unit: "operations/s"
           chart_type: line
           dimensions:
             - name: gets
@@ -80,7 +80,7 @@ metrics:
         - name: riak.kv.latency.get
           description: Time between reception of a client GET request and subsequent
             response to client
-          unit: ms
+          unit: "ms"
           chart_type: line
           dimensions:
             - name: mean
@@ -91,7 +91,7 @@ metrics:
         - name: riak.kv.latency.put
           description: Time between reception of a client PUT request and subsequent
             response to client
-          unit: ms
+          unit: "ms"
           chart_type: line
           dimensions:
             - name: mean
@@ -101,7 +101,7 @@ metrics:
             - name: '100'
         - name: riak.dt.latency.counter_merge
           description: Time it takes to perform an Update Counter operation
-          unit: ms
+          unit: "ms"
           chart_type: line
           dimensions:
             - name: mean
@@ -111,7 +111,7 @@ metrics:
             - name: '100'
         - name: riak.dt.latency.set_merge
           description: Time it takes to perform an Update Set operation
-          unit: ms
+          unit: "ms"
           chart_type: line
           dimensions:
             - name: mean
@@ -121,7 +121,7 @@ metrics:
             - name: '100'
         - name: riak.dt.latency.map_merge
           description: Time it takes to perform an Update Map operation
-          unit: ms
+          unit: "ms"
           chart_type: line
           dimensions:
             - name: mean
@@ -131,7 +131,7 @@ metrics:
             - name: '100'
         - name: riak.search.latency.query
           description: Search query latency
-          unit: ms
+          unit: "ms"
           chart_type: line
           dimensions:
             - name: median
@@ -142,7 +142,7 @@ metrics:
             - name: max
         - name: riak.search.latency.index
           description: Time it takes Search to index a new document
-          unit: ms
+          unit: "ms"
           chart_type: line
           dimensions:
             - name: median
@@ -153,7 +153,7 @@ metrics:
             - name: max
         - name: riak.consistent.latency.get
           description: Strongly consistent read latency
-          unit: ms
+          unit: "ms"
           chart_type: line
           dimensions:
             - name: mean
@@ -163,7 +163,7 @@ metrics:
             - name: '100'
         - name: riak.consistent.latency.put
           description: Strongly consistent write latency
-          unit: ms
+          unit: "ms"
           chart_type: line
           dimensions:
             - name: mean
@@ -173,13 +173,13 @@ metrics:
             - name: '100'
         - name: riak.vm
           description: Total processes running in the Erlang VM
-          unit: total
+          unit: "total"
           chart_type: line
           dimensions:
             - name: processes
         - name: riak.vm.memory.processes
           description: Memory allocated & used by Erlang processes
-          unit: MB
+          unit: "MB"
           chart_type: line
           dimensions:
             - name: allocated
@@ -187,7 +187,7 @@ metrics:
         - name: riak.kv.siblings_encountered.get
           description: Number of siblings encountered during GET operations by this
             node during the past minute
-          unit: siblings
+          unit: "siblings"
           chart_type: line
           dimensions:
             - name: mean
@@ -197,7 +197,7 @@ metrics:
             - name: '100'
         - name: riak.kv.objsize.get
           description: Object size encountered by this node during the past minute
-          unit: KB
+          unit: "KB"
           chart_type: line
           dimensions:
             - name: mean
@@ -208,7 +208,7 @@ metrics:
         - name: riak.search.vnodeq_size
           description: Number of unprocessed messages in the vnode message queues
             of Search on this node in the past minute
-          unit: messages
+          unit: "messages"
           chart_type: line
           dimensions:
             - name: mean
@@ -218,25 +218,25 @@ metrics:
             - name: '100'
         - name: riak.search.index
           description: Number of document index errors encountered by Search
-          unit: errors
+          unit: "errors"
           chart_type: line
           dimensions:
             - name: errors
         - name: riak.core.protobuf_connections
           description: Protocol buffer connections by status
-          unit: connections
+          unit: "connections"
           chart_type: line
           dimensions:
             - name: active
         - name: riak.core.repairs
           description: Number of repair operations this node has coordinated
-          unit: repairs
+          unit: "repairs"
           chart_type: line
           dimensions:
             - name: read
         - name: riak.core.fsm_active
           description: Active finite state machines by kind
-          unit: fsms
+          unit: "fsms"
           chart_type: line
           dimensions:
             - name: get
@@ -245,7 +245,7 @@ metrics:
             - name: list keys
         - name: riak.core.fsm_rejected
           description: Finite state machines being rejected by Sidejobs overload protection
-          unit: fsms
+          unit: "fsms"
           chart_type: line
           dimensions:
             - name: get
@@ -253,7 +253,7 @@ metrics:
         - name: riak.search.index
           description: Number of writes to Search failed due to bad data format by
             reason
-          unit: writes
+          unit: "writes"
           chart_type: line
           dimensions:
             - name: bad_entry
