--- a/collectors/python.d.plugin/samba/metadata.yaml
+++ b/collectors/python.d.plugin/samba/metadata.yaml
@@ -5,23 +5,23 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: syscall.rw
           description: R/Ws
-          unit: KiB/s
+          unit: "KiB/s"
           chart_type: area
           dimensions:
             - name: sendfile
             - name: recvfile
         - name: smb2.rw
           description: R/Ws
-          unit: KiB/s
+          unit: "KiB/s"
           chart_type: area
           dimensions:
             - name: readout
@@ -30,33 +30,33 @@ metrics:
             - name: writeout
         - name: smb2.create_close
           description: Create/Close
-          unit: operations/s
+          unit: "operations/s"
           chart_type: line
           dimensions:
             - name: create
             - name: close
         - name: smb2.get_set_info
           description: Info
-          unit: operations/s
+          unit: "operations/s"
           chart_type: line
           dimensions:
             - name: getinfo
             - name: setinfo
         - name: smb2.find
           description: Find
-          unit: operations/s
+          unit: "operations/s"
           chart_type: line
           dimensions:
             - name: find
         - name: smb2.notify
           description: Notify
-          unit: operations/s
+          unit: "operations/s"
           chart_type: line
           dimensions:
             - name: notify
         - name: smb2.sm_counters
           description: Lesser Ops
-          unit: count
+          unit: "count"
           chart_type: stacked
           dimensions:
             - name: tcon
