--- a/collectors/tc.plugin/metadata.yaml
+++ b/collectors/tc.plugin/metadata.yaml
@@ -5,11 +5,11 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: network device, direction
-      description: ''
+      description: ""
       labels:
         - name: device
           description: TBD
@@ -20,31 +20,31 @@ metrics:
       metrics:
         - name: tc.qos
           description: Class Usage
-          unit: kilobits/s
+          unit: "kilobits/s"
           chart_type: stacked
           dimensions:
             - name: a dimension per class
         - name: tc.qos_packets
           description: Class Packets
-          unit: packets/s
+          unit: "packets/s"
           chart_type: stacked
           dimensions:
             - name: a dimension per class
         - name: tc.qos_dropped
           description: Class Dropped Packets
-          unit: packets/s
+          unit: "packets/s"
           chart_type: stacked
           dimensions:
             - name: a dimension per class
         - name: tc.qos_tokens
           description: Class Tokens
-          unit: tokens
+          unit: "tokens"
           chart_type: line
           dimensions:
             - name: a dimension per class
         - name: tc.qos_ctokens
           description: Class cTokens
-          unit: ctokens
+          unit: "ctokens"
           chart_type: line
           dimensions:
             - name: a dimension per class
