--- a/collectors/xenstat.plugin/metadata.yaml
+++ b/collectors/xenstat.plugin/metadata.yaml
@@ -5,45 +5,45 @@ metrics:
   folding:
     title: Metrics
     enabled: false
-  description: ''
+  description: ""
   availability: []
   scopes:
     - name: global
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: xenstat.mem
           description: Memory Usage
-          unit: MiB
+          unit: "MiB"
           chart_type: stacked
           dimensions:
             - name: free
             - name: used
         - name: xenstat.domains
           description: Number of Domains
-          unit: domains
+          unit: "domains"
           chart_type: line
           dimensions:
             - name: domains
         - name: xenstat.cpus
           description: Number of CPUs
-          unit: cpus
+          unit: "cpus"
           chart_type: line
           dimensions:
             - name: cpus
         - name: xenstat.cpu_freq
           description: CPU Frequency
-          unit: MHz
+          unit: "MHz"
           chart_type: line
           dimensions:
             - name: frequency
     - name: xendomain
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: xendomain.states
           description: Domain States
-          unit: boolean
+          unit: "boolean"
           chart_type: line
           dimensions:
             - name: running
@@ -54,75 +54,75 @@ metrics:
             - name: dying
         - name: xendomain.cpu
           description: CPU Usage (100% = 1 core)
-          unit: percentage
+          unit: "percentage"
           chart_type: line
           dimensions:
             - name: used
         - name: xendomain.mem
           description: Memory Reservation
-          unit: MiB
+          unit: "MiB"
           chart_type: line
           dimensions:
             - name: maximum
             - name: current
         - name: xendomain.vcpu
           description: CPU Usage per VCPU
-          unit: percentage
+          unit: "percentage"
           chart_type: line
           dimensions:
             - name: a dimension per vcpu
     - name: xendomain, vbd
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: xendomain.oo_req_vbd
           description: VBD{%u} Out Of Requests
-          unit: requests/s
+          unit: "requests/s"
           chart_type: line
           dimensions:
             - name: requests
         - name: xendomain.requests_vbd
           description: VBD{%u} Requests
-          unit: requests/s
+          unit: "requests/s"
           chart_type: line
           dimensions:
             - name: read
             - name: write
         - name: xendomain.sectors_vbd
           description: VBD{%u} Read/Written Sectors
-          unit: sectors/s
+          unit: "sectors/s"
           chart_type: line
           dimensions:
             - name: read
             - name: write
     - name: xendomain, network
-      description: ''
+      description: ""
       labels: []
       metrics:
         - name: xendomain.bytes_network
           description: Network{%u} Received/Sent Bytes
-          unit: kilobits/s
+          unit: "kilobits/s"
           chart_type: line
           dimensions:
             - name: received
             - name: sent
         - name: xendomain.packets_network
           description: Network{%u} Received/Sent Packets
-          unit: packets/s
+          unit: "packets/s"
           chart_type: line
           dimensions:
             - name: received
             - name: sent
         - name: xendomain.errors_network
           description: Network{%u} Receive/Transmit Errors
-          unit: errors/s
+          unit: "errors/s"
           chart_type: line
           dimensions:
             - name: received
             - name: sent
         - name: xendomain.drops_network
           description: Network{%u} Receive/Transmit Drops
-          unit: drops/s
+          unit: "drops/s"
           chart_type: line
           dimensions:
             - name: received
